added stream
