# api/swagger/swagger.yaml
@@ -141,6 +141,26 @@ paths:
         default:
           $ref: '#/responses/Error'
 
+  /camera/{id}/stream:
+    x-swagger-router-controller: camera
+    get:
+      operationId: getCameraStream
+      security:
+      - Oauth:
+        - user
+      parameters:
+      - in: path
+        name: id
+        required: true
+        type: string
+      responses:
+        200:
+          description: ok
+          schema:
+            type: object
+        default:
+          $ref: '#/responses/Error'
+
   /camera/{id}/image:
     x-swagger-router-controller: camera
     get:
